--- a/css/output.css
+++ b/css/output.css
@@ -560,6 +560,14 @@ video {
   position: absolute;
 }
 
+.relative{
+  position: relative;
+}
+
+.inset-0{
+  inset: 0px;
+}
+
 .left-0{
   left: 0px;
 }
@@ -570,6 +578,10 @@ video {
 
 .top-0{
   top: 0px;
+}
+
+.top-1\/2{
+  top: 50%;
 }
 
 .z-10{
@@ -586,6 +598,15 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-grab{
+  cursor: grab;
 }
 
 .items-center{
@@ -609,21 +630,37 @@ video {
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .bg-opacity-30{
   --tw-bg-opacity: 0.3;
 }
 
-.bg-opacity-40{
-  --tw-bg-opacity: 0.4;
+.bg-\[url\(\.\.\/images\/slide1\.jpg\)\]{
+  background-image: url(../images/slide1.jpg);
+}
+
+.bg-\[url\(\.\.\/images\/slide2\.jpg\)\]{
+  background-image: url(../images/slide2.jpg);
+}
+
+.bg-\[url\(\.\.\/images\/slide3\.jpg\)\]{
+  background-image: url(../images/slide3.jpg);
+}
+
+.bg-cover{
+  background-size: cover;
+}
+
+.bg-bottom{
+  background-position: bottom;
 }
 
 .text-center{
   text-align: center;
+}
+
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-sm{
@@ -646,6 +683,10 @@ video {
 
 .italic{
   font-style: italic;
+}
+
+.tracking-wider{
+  letter-spacing: 0.05em;
 }
 
 .text-\[\#515b6b\]{
