--- a/css/input.css
+++ b/css/input.css
@@ -8,3 +8,24 @@
     /* font-family: "Fjalla One", sans-serif; */
     /* font-family: "Redressed", cursive; */
 }
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(70px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+
+.fade-in-up {
+    animation-name: fadeInUp;
+    animation-delay: 500ms;
+    animation-duration: 1s;
+    animation-timing-function: ease-in-out;
+    animation-direction: normal;
+    animation-fill-mode: backwards;
+}
