--- a/css/input.css
+++ b/css/input.css
@@ -29,3 +29,17 @@
     animation-direction: normal;
     animation-fill-mode: backwards;
 }
+
+@keyframes zoomIn {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+}
+
+.zoom-in {
+    animation: zoomIn 5s ease-out;
+    animation-fill-mode: forwards;
+}
