--- a/css/input.css
+++ b/css/input.css
@@ -24,7 +24,7 @@
 .fade-in-up {
     animation-name: fadeInUp;
     animation-delay: 500ms;
-    animation-duration: 1s;
+    animation-duration: 400ms;
     animation-timing-function: ease-in-out;
     animation-direction: normal;
     animation-fill-mode: backwards;
