--- a/css/output.css
+++ b/css/output.css
@@ -592,6 +592,10 @@ video {
   display: flex;
 }
 
+.hidden{
+  display: none;
+}
+
 .min-h-screen{
   min-height: 100vh;
 }
@@ -600,9 +604,17 @@ video {
   width: 100%;
 }
 
+.flex-1{
+  flex: 1 1 0%;
+}
+
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-grab{
+  cursor: grab;
 }
 
 .items-center{
@@ -613,16 +625,12 @@ video {
   justify-content: center;
 }
 
-.justify-between{
-  justify-content: space-between;
+.justify-around{
+  justify-content: space-around;
 }
 
 .gap-5{
   gap: 1.25rem;
-}
-
-.overflow-hidden{
-  overflow: hidden;
 }
 
 .bg-blue-500{
@@ -652,6 +660,11 @@ video {
 
 .bg-bottom{
   background-position: bottom;
+}
+
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .text-center{
@@ -725,7 +738,7 @@ video {
 .fade-in-up {
   animation-name: fadeInUp;
   animation-delay: 500ms;
-  animation-duration: 1s;
+  animation-duration: 400ms;
   animation-timing-function: ease-in-out;
   animation-direction: normal;
   animation-fill-mode: backwards;
@@ -747,6 +760,14 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:block{
+    display: block;
+  }
+
+  .md\:flex-auto{
+    flex: 1 1 auto;
+  }
+
   .md\:px-14{
     padding-left: 3.5rem;
     padding-right: 3.5rem;
