--- a/css/input.css
+++ b/css/input.css
@@ -1,12 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Redressed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
+    /* font-family: "Roboto", sans-serif; */
     font-family: "Montserrat", sans-serif;
     /* font-family: "Fjalla One", sans-serif; */
     /* font-family: "Redressed", cursive; */
+
+}
+
+.redressed {
+    font-family: "Redressed", cursive;
 }
 
 @keyframes fadeInUp {
@@ -24,8 +31,8 @@
 .fade-in-up {
     animation-name: fadeInUp;
     animation-delay: 500ms;
-    animation-duration: 400ms;
-    animation-timing-function: ease-in-out;
+    animation-duration: 700ms;
+    animation-timing-function: ease-in;
     animation-direction: normal;
     animation-fill-mode: backwards;
 }
