--- a/css/output.css
+++ b/css/output.css
@@ -685,6 +685,14 @@ video {
   gap: 1.25rem;
 }
 
+.gap-6{
+  gap: 1.5rem;
+}
+
+.gap-2{
+  gap: 0.5rem;
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
@@ -721,6 +729,21 @@ video {
 .bg-blue-500{
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#333\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 51 51 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#00091f\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 9 31 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-30{
@@ -804,6 +827,10 @@ video {
   line-height: 1rem;
 }
 
+.text-\[13px\]{
+  font-size: 13px;
+}
+
 .font-bold{
   font-weight: 700;
 }
@@ -877,6 +904,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\#0a84b7\]{
+  --tw-text-opacity: 1;
+  color: rgb(10 132 183 / var(--tw-text-opacity));
+}
+
+.text-\[\#b3adad\]{
+  --tw-text-opacity: 1;
+  color: rgb(179 173 173 / var(--tw-text-opacity));
+}
+
 .duration-300{
   transition-duration: 300ms;
 }
@@ -928,18 +965,14 @@ video {
   animation-fill-mode: forwards;
 }
 
-.hover\:border:hover{
-  border-width: 1px;
-}
-
-.hover\:border-\[\#f9f9f9\]:hover{
-  --tw-border-opacity: 1;
-  border-color: rgb(249 249 249 / var(--tw-border-opacity));
-}
-
 .hover\:border-\[\#b1dde9\]:hover{
   --tw-border-opacity: 1;
   border-color: rgb(177 221 233 / var(--tw-border-opacity));
+}
+
+.hover\:border-\[\#b5c6bb\]:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(181 198 187 / var(--tw-border-opacity));
 }
 
 .hover\:border-\[\#efdea3\]:hover{
@@ -947,9 +980,9 @@ video {
   border-color: rgb(239 222 163 / var(--tw-border-opacity));
 }
 
-.hover\:text-\[\#f9f9f9\]:hover{
-  --tw-text-opacity: 1;
-  color: rgb(249 249 249 / var(--tw-text-opacity));
+.hover\:border-\[\#f9f9f9\]:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(249 249 249 / var(--tw-border-opacity));
 }
 
 .hover\:text-\[\#b1dde9\]:hover{
@@ -957,14 +990,19 @@ video {
   color: rgb(177 221 233 / var(--tw-text-opacity));
 }
 
+.hover\:text-\[\#b5c6bb\]:hover{
+  --tw-text-opacity: 1;
+  color: rgb(181 198 187 / var(--tw-text-opacity));
+}
+
 .hover\:text-\[\#efdea3\]:hover{
   --tw-text-opacity: 1;
   color: rgb(239 222 163 / var(--tw-text-opacity));
 }
 
-.hover\:text-\[\#b5c6bb\]:hover{
+.hover\:text-\[\#f9f9f9\]:hover{
   --tw-text-opacity: 1;
-  color: rgb(181 198 187 / var(--tw-text-opacity));
+  color: rgb(249 249 249 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px){
@@ -995,9 +1033,9 @@ video {
     padding-right: 5rem;
   }
 
-  .md\:py-10{
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
+  .md\:py-20{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
   }
 
   .md\:py-32{
