--- a/css/output.css
+++ b/css/output.css
@@ -624,8 +624,8 @@ video {
   height: 700px;
 }
 
-.min-h-screen{
-  min-height: 100vh;
+.min-h-\[200px\]{
+  min-height: 200px;
 }
 
 .w-10{
@@ -653,8 +653,16 @@ video {
   cursor: grab;
 }
 
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-col{
   flex-direction: column;
+}
+
+.items-start{
+  align-items: flex-start;
 }
 
 .items-center{
@@ -681,12 +689,16 @@ video {
   gap: 0.5rem;
 }
 
+.gap-20{
+  gap: 5rem;
+}
+
 .gap-3{
   gap: 0.75rem;
 }
 
-.gap-5{
-  gap: 1.25rem;
+.gap-8{
+  gap: 2rem;
 }
 
 .rounded-full{
@@ -737,8 +749,8 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-opacity-30{
-  --tw-bg-opacity: 0.3;
+.bg-opacity-20{
+  --tw-bg-opacity: 0.2;
 }
 
 .bg-\[url\(\.\.\/images\/slide1\.jpg\)\]{
@@ -775,13 +787,24 @@ video {
   padding: 4rem;
 }
 
-.p-6{
-  padding: 1.5rem;
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .py-2{
@@ -794,8 +817,18 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .text-center{
   text-align: center;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-3xl{
@@ -810,6 +843,15 @@ video {
 
 .text-\[13px\]{
   font-size: 13px;
+}
+
+.text-\[24px\]{
+  font-size: 24px;
+}
+
+.text-base{
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-lg{
@@ -845,6 +887,10 @@ video {
 
 .italic{
   font-style: italic;
+}
+
+.leading-\[13px\]{
+  line-height: 13px;
 }
 
 .leading-\[45px\]{
@@ -919,6 +965,10 @@ video {
   font-family: "Montserrat", sans-serif;
   /* font-family: "Fjalla One", sans-serif; */
   /* font-family: "Redressed", cursive; */
+}
+
+.fjalla {
+  font-family: "Fjalla One", sans-serif;
 }
 
 .redressed {
@@ -1006,12 +1056,20 @@ video {
     display: block;
   }
 
-  .md\:flex-auto{
-    flex: 1 1 auto;
+  .md\:min-h-screen{
+    min-height: 100vh;
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row{
     flex-direction: row;
+  }
+
+  .md\:items-start{
+    align-items: flex-start;
   }
 
   .md\:px-10{
@@ -1044,9 +1102,8 @@ video {
     padding-bottom: 1rem;
   }
 
-  .md\:py-6{
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+  .md\:text-left{
+    text-align: left;
   }
 
   .md\:text-3xl{
@@ -1062,10 +1119,6 @@ video {
   .md\:text-6xl{
     font-size: 3.75rem;
     line-height: 1;
-  }
-
-  .md\:text-\[22px\]{
-    font-size: 22px;
   }
 
   .md\:text-lg{
