--- a/css/output.css
+++ b/css/output.css
@@ -562,6 +562,10 @@ video {
   visibility: hidden;
 }
 
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -582,6 +586,10 @@ video {
   right: 0px;
 }
 
+.right-4{
+  right: 1rem;
+}
+
 .top-0{
   top: 0px;
 }
@@ -594,8 +602,16 @@ video {
   top: 2.5rem;
 }
 
+.top-28{
+  top: 7rem;
+}
+
 .z-10{
   z-index: 10;
+}
+
+.z-\[999999999\]{
+  z-index: 999999999;
 }
 
 .mx-auto{
@@ -717,8 +733,8 @@ video {
   gap: 0.75rem;
 }
 
-.gap-8{
-  gap: 2rem;
+.gap-5{
+  gap: 1.25rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -734,6 +750,10 @@ video {
 
 .rounded-full{
   border-radius: 9999px;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .border-2{
@@ -784,6 +804,10 @@ video {
   --tw-bg-opacity: 0.2;
 }
 
+.bg-opacity-50{
+  --tw-bg-opacity: 0.5;
+}
+
 .bg-\[url\(\.\.\/images\/slide1\.jpg\)\]{
   background-image: url(../images/slide1.jpg);
 }
@@ -820,6 +844,10 @@ video {
 
 .p-3{
   padding: 0.75rem;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .px-10{
@@ -920,6 +948,10 @@ video {
   font-weight: 400;
 }
 
+.font-semibold{
+  font-weight: 600;
+}
+
 .italic{
   font-style: italic;
 }
@@ -998,6 +1030,12 @@ video {
 
 .opacity-0{
   opacity: 0;
+}
+
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .duration-200{
@@ -1117,6 +1155,10 @@ video {
 }
 
 @media (min-width: 768px){
+  .md\:right-10{
+    right: 2.5rem;
+  }
+
   .md\:block{
     display: block;
   }
@@ -1139,6 +1181,14 @@ video {
 
   .md\:items-start{
     align-items: flex-start;
+  }
+
+  .md\:gap-10{
+    gap: 2.5rem;
+  }
+
+  .md\:p-8{
+    padding: 2rem;
   }
 
   .md\:px-10{
