--- a/css/input.css
+++ b/css/input.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Redressed&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -9,7 +10,14 @@
     font-family: "Montserrat", sans-serif;
     /* font-family: "Fjalla One", sans-serif; */
     /* font-family: "Redressed", cursive; */
+}
 
+.anton {
+    font-family: "Anton", sans-serif;
+}
+
+.roboto {
+    font-family: "Roboto", sans-serif;
 }
 
 .fjalla {
