--- a/css/output.css
+++ b/css/output.css
@@ -651,6 +651,10 @@ video {
   aspect-ratio: 1 / 1;
 }
 
+.h-14{
+  height: 3.5rem;
+}
+
 .h-20{
   height: 5rem;
 }
@@ -659,20 +663,24 @@ video {
   height: 8rem;
 }
 
-.h-\[400px\]{
-  height: 400px;
+.h-40{
+  height: 10rem;
 }
 
-.h-\[700px\]{
-  height: 700px;
+.h-\[200px\]{
+  height: 200px;
 }
 
 .h-\[300px\]{
   height: 300px;
 }
 
-.h-40{
-  height: 10rem;
+.h-\[400px\]{
+  height: 400px;
+}
+
+.h-\[700px\]{
+  height: 700px;
 }
 
 .min-h-\[200px\]{
@@ -695,6 +703,10 @@ video {
   width: 6rem;
 }
 
+.w-\[100px\]{
+  width: 100px;
+}
+
 .w-\[150px\]{
   width: 150px;
 }
@@ -708,16 +720,12 @@ video {
   width: 100%;
 }
 
-.w-\[\]{
-  width: ;
-}
-
-.w-\[100px\]{
-  width: 100px;
-}
-
 .flex-1{
   flex: 1 1 0%;
+}
+
+.flex-\[1\]{
+  flex: 1;
 }
 
 .-translate-y-1\/2{
@@ -733,6 +741,10 @@ video {
   cursor: pointer;
 }
 
+.resize-none{
+  resize: none;
+}
+
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -743,6 +755,10 @@ video {
 
 .flex-col{
   flex-direction: column;
+}
+
+.place-content-center{
+  place-content: center;
 }
 
 .items-start{
@@ -779,6 +795,10 @@ video {
 
 .gap-3{
   gap: 0.75rem;
+}
+
+.gap-4{
+  gap: 1rem;
 }
 
 .gap-5{
@@ -827,6 +847,10 @@ video {
   border-left-width: 20px;
 }
 
+.border-t-2{
+  border-top-width: 2px;
+}
+
 .border-\[\#2eb161\]{
   --tw-border-opacity: 1;
   border-color: rgb(46 177 97 / var(--tw-border-opacity));
@@ -847,9 +871,9 @@ video {
   border-color: rgb(244 198 31 / var(--tw-border-opacity));
 }
 
-.border-purple-800{
+.border-purple-700{
   --tw-border-opacity: 1;
-  border-color: rgb(107 33 168 / var(--tw-border-opacity));
+  border-color: rgb(126 34 206 / var(--tw-border-opacity));
 }
 
 .border-white{
@@ -932,6 +956,10 @@ video {
   --tw-gradient-from: #093650 var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(9 54 80 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-\[\#136594\]{
+  --tw-gradient-to: #136594 var(--tw-gradient-to-position);
 }
 
 .to-\[\#141755\]{
@@ -1143,6 +1171,11 @@ video {
   color: rgb(46 177 97 / var(--tw-text-opacity));
 }
 
+.text-\[\#333\]{
+  --tw-text-opacity: 1;
+  color: rgb(51 51 51 / var(--tw-text-opacity));
+}
+
 .text-\[\#515b6b\]{
   --tw-text-opacity: 1;
   color: rgb(81 91 107 / var(--tw-text-opacity));
@@ -1196,6 +1229,16 @@ video {
 .text-blue-600{
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.text-purple-700{
+  --tw-text-opacity: 1;
+  color: rgb(126 34 206 / var(--tw-text-opacity));
+}
+
+.text-slate-100{
+  --tw-text-opacity: 1;
+  color: rgb(241 245 249 / var(--tw-text-opacity));
 }
 
 .text-white{
@@ -1350,16 +1393,20 @@ video {
     display: none;
   }
 
+  .md\:h-20{
+    height: 5rem;
+  }
+
   .md\:min-h-screen{
     min-height: 100vh;
   }
 
-  .md\:w-\[800px\]{
-    width: 800px;
-  }
-
   .md\:w-\[80\%\]{
     width: 80%;
+  }
+
+  .md\:w-\[800px\]{
+    width: 800px;
   }
 
   .md\:grid-cols-2{
@@ -1386,6 +1433,10 @@ video {
     gap: 2.5rem;
   }
 
+  .md\:gap-20{
+    gap: 5rem;
+  }
+
   .md\:p-8{
     padding: 2rem;
   }
@@ -1405,11 +1456,6 @@ video {
     padding-right: 5rem;
   }
 
-  .md\:py-16{
-    padding-top: 4rem;
-    padding-bottom: 4rem;
-  }
-
   .md\:py-20{
     padding-top: 5rem;
     padding-bottom: 5rem;
@@ -1423,16 +1469,6 @@ video {
   .md\:py-32{
     padding-top: 8rem;
     padding-bottom: 8rem;
-  }
-
-  .md\:py-1{
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-  }
-
-  .md\:py-4{
-    padding-top: 1rem;
-    padding-bottom: 1rem;
   }
 
   .md\:py-40{
@@ -1466,6 +1502,10 @@ video {
 }
 
 @media (min-width: 1024px){
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
   .lg\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
