--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,8 @@
 
 .project-img::after {
     content: "";
-    width: 150px;
+    width: 650px;
+    /*  width: 650px;  was 150 */
     height: 150px;
     position: absolute;
     right: 0;
