--- a/css/style.css
+++ b/css/style.css
@@ -425,6 +425,7 @@
   top: 0;
   left: 0;
   background: #4c145a;
+  /* background-color: #000; */
   border-radius: 10px;
   opacity: 1;
   z-index: -1;
@@ -440,7 +441,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  background: var(--bs-primary);
+  background: #4c145a;
   border-radius: 10px;
   opacity: 1;
   z-index: -1;
@@ -463,7 +464,8 @@
   display: inline-block;
   padding: 20px 25px;
   /* background: var(--bs-primary); */
-  background: #842281;
+  background: #4c145a;
+  /* background-color: red; */
   border-radius: 10px;
 }
 
