--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,9 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  background: #4c145a;
+  background: var(--bs-primary);
+  /* background: black; */
+  /* background: #4c145a; */
   border-radius: 10px;
   opacity: 1;
   z-index: -1;
