--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+.countdowns{
+  /* position: fixed; */
+}
+
+
 .video-container {
     position: relative;
     padding-bottom: 56.25%; /* 16:9 aspect ratio */
@@ -14,17 +19,28 @@
     height: 100%;
 }
 /*** Spinner Start ***/
-.full-screen {
-  width: 100vw; /* Full viewport width */
-  height: 100vh; /* Full viewport height */
-  object-fit: cover; /* Ensures the image covers the entire area */
-}
-/* 
-.carousel-inner,
-.carousel-item {
+/* .full-screen {
+  width: 100vw;
   height: 100vh; 
+  object-fit: cover; 
+} */
+@media (min-width: 992px) {
+  body{
+    /* background-color:red; */
+  }
+  .carousel-item img {
+    /* width: 100%; */
+    /* width:50px; */
+  }
 }
 
+
+.miancontainer {
+  /* height: 100vh;  */
+  /* width: 100%; */
+  /* margin-right: 300px; */
+}
+/* 
 .carousel-caption {
   position: absolute;
   bottom: 20px;
@@ -33,7 +49,7 @@
   z-index: 10;
   color: #fff;
 
-} */
+}  */
 
 #spinner {
   opacity: 0;
@@ -183,6 +199,7 @@
   .ppctext{
     display: block;
   }
+ 
 }
 
 
@@ -295,7 +312,7 @@
   height: 10px;
   /* background: var(--bs-primary); */
   background: #842281;;
-  margin: 10px;
+  /* margin: 15px; */
   border-radius: 30px;
   opacity: 1;
 }
@@ -327,6 +344,7 @@
 @media (max-width: 768px) {
   .carousel-item {
     min-height: 400px;
+    /* margin-top: 400px; */
   }
 
   .carousel-item img {
@@ -338,9 +356,13 @@
     font-size: 28px !important;
   }
 
-  .carousel-item p {
+  .carousel-item p{
     font-size: 14px !important;
   }
+
+  
+
+  
 }
 
 .page-header {
